Fix text fragment scrolling which behind the floating top bar
refs: #749

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1264,6 +1264,7 @@ Usage (In Ghost editor):
 .post-full-content h6 {
     color: color-mod(var(--darkgrey) l(-5%));
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    scroll-margin-top: 110px;
 }
 
 .post-full-content h1 {
